driver path changed

--- a/wej02/src/test/resources/com/example/webguidemo/config.properties
+++ b/wej02/src/test/resources/com/example/webguidemo/config.properties
@@ -1,2 +1,2 @@
-driverLocation=/home/PJWSTK/s11995/Pobrane/chromedriver
-screenshotPath=/home/PJWSTK/s11995/Pobrane/testSelenium.png
+driverLocation=/Users/kuba/Dev/chromedriver/chromedriver
+screenshotPath=./testSelenium.png
