--- a/restservice2/pom.xml
+++ b/restservice2/pom.xml
@@ -49,6 +49,11 @@
 			<artifactId>hsqldb</artifactId>
 			<version>2.3.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.dbunit</groupId>
+			<artifactId>dbunit</artifactId>
+			<version>2.5.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>restservicedemo</finalName>
